# fa24d

./: .gitignore  README.md  justfile  plots.ipynb  pyproject.toml
.pyre/: pyre.stderr
fixtures/: aim_header.csv  aim_header_multiline_comment.csv  racechrono_header.csv
src/: compare.py  inspect.py  main.py  mappings.py  view.py
src/lib/: conversions.py  lap.py
src/lib/csv/: __init__.py  metadata.py  utils.py
src/lib/csv/reader/: abstract_csv_reader.py  aim.py  race_chrono.py
src/lib/csv/reader/test/: test_aim.py  test_race_chrono.py
src/lib/csv/test/: test_metadata.py  test_utils.py
src/lib/viz/: charts.py
src/test/: test_mappings.py
