[tool.poetry]
name = "fa24d"
version = "0.1.0"
description = ""
authors = ["Brian Armstrong <brian@900BRZ.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
geopandas = "^1.0.1"
seaborn = "^0.13.2"
ipywidgets = "^7.0.0"
ipyfilechooser = "^0.6.0"
mypy = "^1.14.1"
pytest = "^8.3.4"
black = "^25.1.0"
pandas-stubs = "^2.2.3.241126"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
